crates/aven-check/tests/fixtures/check/valid/open-row-transforms.av
RecordOpenSpreadAdd : { ..r, timeout: Int } = value
RecordOpenSpreadUpdate : { ..r, x :: Float } = value
RecordOpenMarkerUpdate : { x: Int, .., y :: Text } = value

VariantOpenSpreadAdd : @{ ..r, @Extra } = value

DeferredOpenDelete : { ..r, -x } = value
DeferredOpenRename : { ..r, x -> y } = value
