crates/aven-check/tests/fixtures/check/invalid/call-arg-curried.av
f : (Text) -> (Int) -> Int
f = (x) => (y) => { text: x, value: y }.value
result : Int = f("a")("bad")
